# coreminer

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build-dummy.sh  build-release.sh  release-plz.toml
.github/: dependabot.yaml
.github/workflows/: cargo.yaml  release.yaml
examples/: dummy.c  dummy2.c  dummy3.c  hello_world_plugin.rs  how_many_fds.c  print_args.c  ptrace_self.c  signals.c  sigtrap_self.c  sleeper.c
src/: addr.rs  breakpoint.rs  consts.rs  dbginfo.rs  debuggee.rs  debugger.rs  disassemble.rs  dwarf_parse.rs  errors.rs  extension_points.rs  feedback.rs  lib.rs  memorymap.rs  stack.rs  ui.rs  unwind.rs  variable.rs
src/bins/: cm.rs  cmserve.rs
src/plugins/: extension_points.rs  hello_world.rs  mod.rs  sigtrap_guard.rs  sigtrap_self.rs
src/ui/: cli.rs  json.rs
