[package]
name = "coreminer"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>", "Marco Ludwig"]
license = "MIT"
description = "A debugger which can be used to debug programs that do not want to be debugged"
readme = "README.md"
homepage = "https://github.com/debugger-bs/coreminer"
repository = "https://github.com/debugger-bs/coreminer"
keywords = [""]


[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
gimli = "0.31.1"
nix = { version = "0.29.0", features = ["process"] }
serde = "1.0.217"
serde_json = "1.0.137"

[[bin]]
name = "cm"
path = "src/bins/cm.rs"
