[package]
name = "coreminer"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>", "Marco Ludwig"]
license = "MIT"
description = "A debugger which can be used to debug programs that do not want to be debugged"
readme = "README.md"
homepage = "https://github.com/debugger-bs/coreminer"
repository = "https://github.com/debugger-bs/coreminer"
keywords = [""]


[dependencies]
addr2line = "0.24.2"
clap = { version = "4.5.27", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["history"] }
gimli = { version = "0.31.1", default-features = true, features = [
	"std",
	"read",
] }
nix = { version = "0.29.0", features = ["personality", "process", "ptrace"] }
object = "0.36.7"
ouroboros = "0.18.5"
serde = "1.0.217"
serde_json = "1.0.137"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "cm"
path = "src/bins/cm.rs"
